# homebrew-luciferous-tap

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  tap_info.json
.github/workflows/: create_formula_by_published_release.yml
Formula/: aws-credential-process-provider-from-dotenv.rb  case-converter.rb  oidc-jwks-converter.rb  rtid-cli.rb
kanban/0001_write_render_readme_tests/: 0001_write_render_readme_tests.md  log.md
kanban/0002_improve_render_readme_test/: 0002_improve_render_readme_test.md  log.md
kanban/0003_fix_render_readme_tests/: 0003_fix_render_readme_tests.md  log.md
kanban/0004_test_resolve_assets/: 0004_test_resolve_assets.md  log.md
kanban/0005_test_parse_assets/: 0005_test_parse_assets.md  log.md
kanban/0006_validate_jwt_token/: 0006_validate_jwt_token.md  log.md
kanban/0007_add_commit_push_step/: 0007_add_commit_push_step.md  log.md
kanban/0008_improve_workflow_commit_message/: 0008_improve_workflow_commit_message.md  log.md
src/handlers/create_formula_by_published_release/: create_formula_by_published_release.py  index.py
src/utils/jinja2/: __init__.py  render_formula.py  render_readme.py
src/utils/jinja2/templates/: README.md.j2  formula.rb.j2
src/utils/models/: __init__.py  asset_info.py  decoded_jwt_info.py  formula_info.py  tap_info.py
src/utils/usecases/: __init__.py  create_formula_info.py  parse_decoded_jwt_info.py  resolve_assets.py
tests/unit/: conftest.py
tests/unit/fixtures/load_text/: display_name_override.txt  long_descriptions.txt  mixed_casks_and_formulas.txt  multiple_casks_no_formulas.txt  (+3 more)
(+12 files in other folders)
